GNOME Bugzilla – Bug 755585
Unused signals in EphyWebView
Last modified: 2016-02-10 14:06:20 UTC
There are tons of unused signals (signals that are never emitted, signals that are never connected to, and signals that are connected to only by EphyWebView itself) in EphyWebView. We should remove at least the ones that are never emitted... and maybe the others too?
Created attachment 320743 [details] [review] web-view: Remove signals that are never emitted or connected to
Created attachment 320744 [details] [review] web-view: Fix a typo
Created attachment 320745 [details] [review] web-view: Remove ge_popups_blocked signal It's connected to, but never emitted
Created attachment 320746 [details] [review] web-view: Remove ge_modal_alert signal It's connected to, but never emitted
Created attachment 320747 [details] [review] web-view: Remove new-document-now signal Nothing connects to it
Created attachment 320748 [details] [review] web-view: Remove loading-homepage signal Nothing connects to it. Also, we don't have homepages anymore.
Attachment 320743 [details] pushed as c78ab6f - web-view: Remove signals that are never emitted or connected to Attachment 320744 [details] pushed as 5b662da - web-view: Fix a typo Attachment 320745 [details] pushed as 4ee6439 - web-view: Remove ge_popups_blocked signal Attachment 320746 [details] pushed as ea93a62 - web-view: Remove ge_modal_alert signal Attachment 320747 [details] pushed as 0c5dec3 - web-view: Remove new-document-now signal Attachment 320748 [details] pushed as 9738979 - web-view: Remove loading-homepage signal