web-view: Remove signals that are never emitted or connected to

https://bugzilla.gnome.org/show_bug.cgi?id=755585